# kt_glib

./: CMakeLists.txt  license.md  readme.md
glib/include/: base.hpp  base_algorithm.hpp  circle.hpp  ellipse.hpp  polygon.hpp  rectangle.hpp  square.hpp  test.hpp  triangle.hpp
glib/include/macro/: error_handler.hpp  math_macro.hpp  test.hpp
glib/include/t/: unit_test.cpp
glib/sources/: base_algorithm.cpp  error_handler.cpp  math_macro.cpp
glib/sources/t/: unit_test.cpp
standalone/: main_standalone.cpp
tests/: main_test.cpp
